fix: container widget renderer title spacing and color (#270)
* fix: widget renderer title spacing

* style: title color darker

* style: increase spacing

--- a/projects/dashboards/src/widgets/container/container-widget-renderer.component.scss
+++ b/projects/dashboards/src/widgets/container/container-widget-renderer.component.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
 
   .title {
-    @include widget-title($gray-7);
-    margin-top: 15px;
+    @include widget-title($gray-9);
+    padding-bottom: 16px;
   }
 }
